initial draft of presentation

--- a/css/theme/custom.css
+++ b/css/theme/custom.css
@@ -18,7 +18,7 @@ body {
   font-family: "Roboto", Roboto, sans-serif;
   font-size: 30px;
   font-weight: normal;
-  color: #2c3e50; }
+  color: #c0392b; }
 
 ::selection {
   color: #fff;
@@ -40,7 +40,7 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #2980b9;
+  color: #c0392b;
   font-family: "Roboto Slab", RobotoSlab, serif;
   font-weight: 600;
   line-height: 1.2;
@@ -226,9 +226,8 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  /*border: 4px solid #2c3e50;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); */
-}
+  border: 4px solid #c0392b;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
