--- a/css/theme/source/custom.scss
+++ b/css/theme/source/custom.scss
@@ -18,8 +18,8 @@
 // Override theme settings (see ../template/settings.scss)
 $backgroundColor: #fff;
 
-$mainColor: #2c3e50;
-$headingColor: #2980b9;
+$mainColor: #c0392b;
+$headingColor: #c0392b;
 
 $mainFontSize: 30px;
 $mainFont: 'Roboto', Roboto, sans-serif;
