--- a/css/parallel_coord.css
+++ b/css/parallel_coord.css
@@ -4,13 +4,13 @@
 
 .background path {
   fill: none;
-  stroke: #ddd;
+  stroke: #bdc3c7;
   shape-rendering: crispEdges;
 }
 
 .foreground path {
   fill: none;
-  stroke: steelblue;
+  stroke: #c0392b;
 }
 
 .brush .extent {
@@ -27,5 +27,9 @@
 }
 
 .axis text {
-  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+  text-shadow: 0 1px 0 #bdc3c7, 1px 0 0 #bdc3c7, 0 -1px 0 #bdc3c7, -1px 0 0 #bdc3c7;
 }
+
+/*.axis + .axis g text {
+  display: none;
+}*/
